🌍 Add complete translations for sidebar in all supported languages

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,8 +1,83 @@
 {
-  "dashboard": "Dashboard",
-  "language": "Sprache",
-  "bookings": "Buchungen",
-  "customers": "Kundenverwaltung",
-  "inventory": "Lagerverwaltung",
-  "settings": "Einstellungen"
+  "sidebar": {
+    "dashboard": "Übersicht",
+    "bookings": "Buchungen",
+    "upcoming": "Bevorstehende Buchungen",
+    "today": "Heutige Buchungen",
+    "unassigned": "Nicht zugewiesene Buchungen",
+    "quotes": "Angebote & Kostenvoranschläge",
+    "cancellations": "Stornierungen",
+    "history": "Buchungshistorie",
+    "drafts": "Entwürfe",
+    "calendar": "Kalenderansicht",
+    "map": "Kartenansicht",
+    "customers": "Kundenverwaltung",
+    "crm": "CRM",
+    "websites": "Websites & Formulare",
+    "forms": "Formularersteller",
+    "pages": "Webseiten",
+    "inventory": "Inventarverwaltung",
+    "inventoryDashboard": "Inventarübersicht",
+    "productListings": "Produktlisten",
+    "productRequests": "Produktanfragen",
+    "suppliers": "Lieferantenverzeichnis",
+    "stockLevels": "Bestandsmengen",
+    "purchaseOrders": "Bestellungen",
+    "inventoryReports": "Inventarberichte",
+    "providers": "Dienstleisterverwaltung",
+    "viewProviders": "Dienstleister anzeigen",
+    "addProvider": "Dienstleister hinzufügen",
+    "providerSchedules": "Dienstleisterpläne",
+    "staff": "Mitarbeiterverwaltung",
+    "staffList": "Mitarbeiter",
+    "hiring": "Einstellungen",
+    "scheduler": "Zeitplan",
+    "shifts": "Schichten",
+    "checkin": "Ein-/Auschecken",
+    "timetracking": "Zeiterfassung",
+    "marketing": "Marketing",
+    "marketingDashboard": "Marketing-Dashboard",
+    "leads": "Leads",
+    "campaigns": "Kampagnenerstellung",
+    "automations": "Automatisierungsabläufe",
+    "retargeting": "Retargeting & Funnels",
+    "discounts": "Rabatte",
+    "coupons": "Gutscheincodes",
+    "referrals": "Empfehlungsprogramm",
+    "giftCards": "Geschenkkarten",
+    "ads": "Anzeigenmanager",
+    "sms": "SMS-Kampagnen",
+    "email": "E-Mail-Kampagnen",
+    "social": "Social-Media-Planer",
+    "seo": "SEO-Tools",
+    "blog": "Blog & Inhalte",
+    "reviews": "Kundenbewertungen",
+    "ai": "KI-Tools",
+    "aiChatbot": "KI-Chatbot",
+    "aiResponses": "Intelligente Antworten",
+    "aiCampaigns": "KI-Kampagnen",
+    "aiContent": "Inhaltserstellung",
+    "aiWorkflows": "Workflow-Builder",
+    "aiPredict": "Intelligente Vorhersagen",
+    "aiInsights": "Kundenerkenntnisse",
+    "aiSegmentation": "Automatische Segmentierung",
+    "reports": "Berichte",
+    "logs": "Aktivitätsprotokolle",
+    "settings": "Einstellungen",
+    "generalSettings": "Allgemeine Einstellungen",
+    "notifications": "Benachrichtigungen",
+    "preferences": "Benutzereinstellungen",
+    "appearance": "Darstellung",
+    "domains": "Domainverwaltung",
+    "language": "Sprache",
+    "timezones": "Zeitzonen",
+    "industries": "Branchen",
+    "apiKeys": "API-Schlüssel",
+    "account": "Konto",
+    "myProfile": "Mein Profil",
+    "billing": "Abrechnung",
+    "security": "Sicherheit",
+    "teamSwitch": "Team wechseln",
+    "logout": "Abmelden"
+  }
 }
