--- a/locales/en.json
+++ b/locales/en.json
@@ -1,8 +1,83 @@
 {
-  "dashboard": "Dashboard",
-  "language": "Language",
-  "bookings": "Bookings",
-  "customers": "Customer Management",
-  "inventory": "Inventory Management",
-  "settings": "Settings"
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "bookings": "Bookings",
+    "upcoming": "Upcoming Bookings",
+    "today": "Today's Bookings",
+    "unassigned": "Unassigned Bookings",
+    "quotes": "Quotes & Estimates",
+    "cancellations": "Cancellations",
+    "history": "Booking History",
+    "drafts": "Draft Bookings",
+    "calendar": "Calendar View",
+    "map": "Map View",
+    "customers": "Customer Management",
+    "crm": "CRM",
+    "websites": "Websites & Forms",
+    "forms": "Forms Builder",
+    "pages": "Website Pages",
+    "inventory": "Inventory Management",
+    "inventoryDashboard": "Inventory Dashboard",
+    "productListings": "Product Listings",
+    "productRequests": "Product Requests",
+    "suppliers": "Supplier Directory",
+    "stockLevels": "Stock Levels",
+    "purchaseOrders": "Purchase Orders",
+    "inventoryReports": "Inventory Reports",
+    "providers": "Providers Management",
+    "viewProviders": "View Providers",
+    "addProvider": "Add Provider",
+    "providerSchedules": "Provider Schedules",
+    "staff": "Staff Management",
+    "staffList": "Staff",
+    "hiring": "Hiring",
+    "scheduler": "Scheduler",
+    "shifts": "Shifts",
+    "checkin": "Check In / Out",
+    "timetracking": "Time Tracking",
+    "marketing": "Marketing",
+    "marketingDashboard": "Marketing Dashboard",
+    "leads": "Leads",
+    "campaigns": "Campaign Builder",
+    "automations": "Automation Flows",
+    "retargeting": "Retargeting & Funnels",
+    "discounts": "Discounts",
+    "coupons": "Coupon Codes",
+    "referrals": "Referral Program",
+    "giftCards": "Gift Cards",
+    "ads": "Ad Manager",
+    "sms": "SMS Campaigns",
+    "email": "Email Blasts",
+    "social": "Social Scheduler",
+    "seo": "SEO Tools",
+    "blog": "Blog & Content",
+    "reviews": "Customer Reviews",
+    "ai": "AI Tools",
+    "aiChatbot": "AI Chatbot",
+    "aiResponses": "Smart Replies",
+    "aiCampaigns": "Campaign Generator",
+    "aiContent": "Content Creator",
+    "aiWorkflows": "Workflow Builder",
+    "aiPredict": "Smart Predictions",
+    "aiInsights": "Customer Insights",
+    "aiSegmentation": "Auto Segmentation",
+    "reports": "Reports",
+    "logs": "Activity Logs",
+    "settings": "Settings",
+    "generalSettings": "General Settings",
+    "notifications": "Notifications",
+    "preferences": "User Preferences",
+    "appearance": "Appearance",
+    "domains": "Domain Management",
+    "language": "Language",
+    "timezones": "Timezones",
+    "industries": "Industries",
+    "apiKeys": "API Keys",
+    "account": "Account",
+    "myProfile": "My Profile",
+    "billing": "Billing",
+    "security": "Security",
+    "teamSwitch": "Switch Team",
+    "logout": "Logout"
+  }
 }
