--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,8 +1,83 @@
 {
-  "dashboard": "Dashboard",
-  "language": "Taal",
-  "bookings": "Boekingen",
-  "customers": "Klantenbeheer",
-  "inventory": "Voorraadbeheer",
-  "settings": "Instellingen"
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "bookings": "Boekingen",
+    "upcoming": "Aankomende Boekingen",
+    "today": "Boekingen van Vandaag",
+    "unassigned": "Niet-toegewezen Boekingen",
+    "quotes": "Offertes & Schattingen",
+    "cancellations": "Annuleringen",
+    "history": "Boekingsgeschiedenis",
+    "drafts": "Conceptboekingen",
+    "calendar": "Kalenderweergave",
+    "map": "Kaartweergave",
+    "customers": "Klantenbeheer",
+    "crm": "CRM",
+    "websites": "Websites & Formulieren",
+    "forms": "Formulierbouwer",
+    "pages": "Webpagina’s",
+    "inventory": "Voorraadbeheer",
+    "inventoryDashboard": "Voorraaddashboard",
+    "productListings": "Productoverzicht",
+    "productRequests": "Productaanvragen",
+    "suppliers": "Leveranciersdirectory",
+    "stockLevels": "Voorraadniveaus",
+    "purchaseOrders": "Inkooporders",
+    "inventoryReports": "Voorraadoverzichten",
+    "providers": "Leveranciersbeheer",
+    "viewProviders": "Bekijk Leveranciers",
+    "addProvider": "Voeg Leverancier Toe",
+    "providerSchedules": "Leveranciersroosters",
+    "staff": "Personeelsbeheer",
+    "staffList": "Personeel",
+    "hiring": "Werving",
+    "scheduler": "Planner",
+    "shifts": "Diensten",
+    "checkin": "In-/Uitchecken",
+    "timetracking": "Tijdregistratie",
+    "marketing": "Marketing",
+    "marketingDashboard": "Marketingdashboard",
+    "leads": "Leads",
+    "campaigns": "Campagnebouwer",
+    "automations": "Automatiseringen",
+    "retargeting": "Retargeting & Funnels",
+    "discounts": "Kortingen",
+    "coupons": "Kortingscodes",
+    "referrals": "Verwijsprogramma",
+    "giftCards": "Cadeaubonnen",
+    "ads": "Advertentiebeheer",
+    "sms": "SMS Campagnes",
+    "email": "E-mailcampagnes",
+    "social": "Social Media Planner",
+    "seo": "SEO Tools",
+    "blog": "Blog & Inhoud",
+    "reviews": "Klantenbeoordelingen",
+    "ai": "AI Tools",
+    "aiChatbot": "AI Chatbot",
+    "aiResponses": "Slimme Antwoorden",
+    "aiCampaigns": "Campagnegenerator",
+    "aiContent": "Inhoudgenerator",
+    "aiWorkflows": "Workflowbouwer",
+    "aiPredict": "Slimme Voorspellingen",
+    "aiInsights": "Klantinzichten",
+    "aiSegmentation": "Automatische Segmentatie",
+    "reports": "Rapporten",
+    "logs": "Activiteitenlogboeken",
+    "settings": "Instellingen",
+    "generalSettings": "Algemene Instellingen",
+    "notifications": "Meldingen",
+    "preferences": "Gebruikersvoorkeuren",
+    "appearance": "Uiterlijk",
+    "domains": "Domeinbeheer",
+    "language": "Taal",
+    "timezones": "Tijdzones",
+    "industries": "Sectoren",
+    "apiKeys": "API-sleutels",
+    "account": "Account",
+    "myProfile": "Mijn Profiel",
+    "billing": "Facturatie",
+    "security": "Beveiliging",
+    "teamSwitch": "Wissel van Team",
+    "logout": "Uitloggen"
+  }
 }
